--- a/package.json
+++ b/package.json
@@ -21,10 +21,15 @@
   },
   "homepage": "https://github.com/LambdaSchool/node-server-testing#readme",
   "devDependencies": {
-    "jest": "^24.9.0",
+    "cross-env": "^7.0.2",
+    "nodemon": "^2.0.4",
     "supertest": "^4.0.2"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "knex": "^0.21.2",
+    "pg": "^8.3.0",
+    "sqlite3": "^5.0.0"
   }
 }
