--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Node Server Testing Challenge",
   "main": "server.js",
   "scripts": {
-    "test": "jest --watch"
+    "server": "nodemon index.js",
+    "start": "node index.js",
+    "test": "cross-env DB_ENV=testing jest --watch"
   },
   "jest": {
     "testEnvironment": "node"
@@ -28,6 +30,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jest": "^26.4.0",
     "knex": "^0.21.2",
     "pg": "^8.3.0",
     "sqlite3": "^5.0.0"
